Fix spacing

--- a/app/styles/ui/dialogs/_release-notes.scss
+++ b/app/styles/ui/dialogs/_release-notes.scss
@@ -3,7 +3,7 @@
 #release-notes {
   max-height: 500px;
   max-width: 800px;
-  min-width: 400px;
+  min-width: 500px;
 
   .dialog-content {
     // we'll own the layout inside here
@@ -39,6 +39,7 @@
   .dialog-footer {
     flex-direction: row;
     justify-content: space-between;
+    gap: var(--spacing);
   }
 
   ul {
